[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stk_widgets"
version = "0.1.0"
description = "Custom widgets for tkinter"
authors = [{name = "Oladapo Akintola"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text="MIT"}
keywords = ["tkinter", "widgets", "GUI"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/OladapoAkintola/stk-widgets"

dependencies = [
    "customtkinter",
    "Pillow",
]
